--- a/Reloaded.Editor.vcxproj
+++ b/Reloaded.Editor.vcxproj
@@ -140,8 +140,9 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameStructs.h" />
     <ClInclude Include="General.h" />
-    <ClInclude Include="Graphics.h" />
+    <ClInclude Include="Rendering.h" />
     <ClInclude Include="Hooks.h" />
+    <ClInclude Include="Shadows.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="MemoryWriter.h" />
     <ClInclude Include="pch.h" />
@@ -153,7 +154,8 @@
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="General.cpp" />
-    <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="Rendering.cpp" />
+    <ClCompile Include="Shadows.cpp" />
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
