--- a/Reloaded.Editor.vcxproj.filters
+++ b/Reloaded.Editor.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Shadows.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ShadowMapFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
